--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "aitoc/smtp",
     "description": "SMTP",
     "require": {
-        "php": "~5.6.5|7.0.2|7.0.4|~7.0.6|~7.0.13|~7.1.0|~7.2.0|~7.3.0"
+        "php": "~5.6.5|~7.0"
     },
     "type": "magento2-module",
     "version": "1.0.0",
