require aitoc/core as a dependency
dev-master version chose because the latest version doesn't support php7.4

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "aitoc/smtp",
     "description": "SMTP",
     "require": {
-        "php": "~5.6.5|~7.0"
+        "php": "~5.6.5|~7.0",
+        "aitoc/core": "dev-master"
     },
     "type": "magento2-module",
     "version": "1.0.0",
