--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "aitoc/core": "dev-master"
     },
     "type": "magento2-module",
-    "version": "1.0.0",
+    "version": "dev-master",
     "license": [
         "Commercial"
     ],
