--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,21 @@
 {
-    "name": "aitoc/smtp",
-    "description": "SMTP",
-    "require": {
-        "php": "~5.6.5|7.0.2|7.0.4|~7.0.6|~7.0.13|~7.1.0|~7.2.0|~7.3.0"
-    },
-    "type": "magento2-module",
-    "version": "1.0.0",
-    "license": [
-        "Commercial"
+  "name": "aitoc/smtp",
+  "description": "SMTP",
+  "require": {
+    "ext-dom": "*",
+    "aitoc/core": ">=1.0.8"
+  },
+  "type": "magento2-module",
+  "version": "1.0.4",
+  "license": [
+    "proprietary"
+  ],
+  "autoload": {
+    "files": [
+      "registration.php"
     ],
-    "autoload": {
-        "files": [ "registration.php" ],
-        "psr-4": {
-            "Aitoc\\Smtp\\": ""
-        }
+    "psr-4": {
+      "Aitoc\\Smtp\\": ""
     }
+  }
 }
